--- a/deployment.properties
+++ b/deployment.properties
@@ -4,4 +4,9 @@ appdir.includes = vendor,\
 		auth.php,\
 		login.php,\
 		index.php,\
-		menu.php
+		menu.php,\
+		autent,\
+		formCrear.php,\
+		logout.php,\
+		formBuscar.php,\
+		formEsborrar.php
