--- a/deployment.properties
+++ b/deployment.properties
@@ -9,4 +9,5 @@ appdir.includes = vendor,\
 		formCrear.php,\
 		logout.php,\
 		formBuscar.php,\
-		formEsborrar.php
+		formEsborrar.php,\
+		formModificar.php
